编写头部和热门部分的smart和dumb组件

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1,shrink-to-fit=no">
 	<title>饿了么</title>
 	<link rel="shortcut icon" href="favicon.png" /> 
+	<link rel="stylesheet" href="index.css">
 	<script type="text/javascript">
 		(function(psdw){
 			var dpr=0 , rem=0 , scale=0;
@@ -16,7 +17,7 @@
 			rem=rem*scale;
 			htmlDOM.style.fontSize=rem+'px';
 			htmlDOM.setAttribute('data-dpr',dpr)
-		})(375)
+		})(750)
 	</script>
 </head>
 <body>
